feat: 添加日志系统并优化执行流程
新增utils/logger_system.py模块，提供完整的日志记录功能：
- 实现文本日志和JSON日志双格式记录
- 支持时间戳标记和日志级别分类
- 提供JSON数据的持久化存储和增量追加
- 具备日志文件损坏时的自动恢复机制

重构main.py执行流程，优化系统集成：
- 调整执行顺序：构建workspace → 初始化日志系统 → 验证配置 → 获取系统信息
- 集成LoggerSystem，所有执行状态同步记录到日志
- 提前加载配置，支持workspace构建阶段的配置需求
- 统一异常处理和错误信息记录

更新.env.example，将日志目录调整为./workspace以适配新的日志系统。

--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ MODEL_NAME=qwen-max
 LOG_LEVEL=INFO
 
 # 日志输出路径
-LOG_DIR=./logs
+LOG_DIR=./workspace
 
 # ============================================
 # 实验配置
