feat: 完善Agent配置系统和异步化支持
- 新增core/config/agent.json配置文件，支持模型类型、步数、温度等参数
- 扩展环境配置，添加AGENT_NUM和AGENT_CONFIG_DIR配置项
- 重构AgentPool初始化流程，支持配置文件驱动的批量创建
- 完善工具加载机制，支持基于配置的工具管理
- 将Agent的LLM调用改为异步方式，提升并发性能
- 优化错误处理和日志记录，提供更清晰的执行反馈

--- a/.env.example
+++ b/.env.example
@@ -27,6 +27,12 @@ MAX_CONCURRENT_AGENTS=5
 # Agent超时时间（秒）
 AGENT_TIMEOUT=300
 
+# Agent数目
+AGENT_NUM=30
+
+# Agent配置文件
+AGENT_CONFIG_DIR=./core/config/agent.json
+
 # ============================================
 # MLE-bench配置
 # ============================================
