feat: 新增任务执行管道和配置系统
- 新增Task任务类定义，支持explore、merge、select、review等类型
- 实现Pipeline任务执行管道，管理任务生命周期和并发访问
- 扩展环境配置，添加INIT_TASK_NUM、EXPLORE_RATIO、STEP_TASK_NUM配置项
- 支持任务优先级、状态管理和Agent分配
- 为多Agent协作系统提供核心任务调度基础设施

--- a/.env.example
+++ b/.env.example
@@ -57,3 +57,15 @@ MLE_BENCH_SERVER_URL=http://127.0.0.1:8001
 
 # 私有基准数据存放目录
 MLE_BENCH_PRIVATE_DATA_DIR=./dataset/private
+
+# ============================================
+# 任务执行配置
+# ============================================
+# 初始任务数量
+INIT_TASK_NUM=4
+
+# Explore任务比例 (0.0 - 1.0)
+EXPLORE_RATIO=0.5
+
+# 每次添加的任务数量
+STEP_TASK_NUM=2
