feat: 集成迭代控制器和完整竞赛执行流程
- 新增IterationController迭代控制器，实现竞赛循环的核心逻辑
- 完善main.py主流程，集成Pipeline、Journal和IterationController
- 优化配置管理，支持可选配置和时间限制计算
- 大幅简化explore提示模板，移除冗余代码结构
- 新增成功指标分析工具，支持执行结果评估
- 实现完整的Agent协作和任务调度执行架构

--- a/.env.example
+++ b/.env.example
@@ -22,7 +22,7 @@ LOG_DIR=./workspace
 RANDOM_SEED=42
 
 # 最大并发Agent数量
-MAX_CONCURRENT_AGENTS=5
+MAX_CONCURRENT_AGENTS=1
 
 # Agent超时时间（秒）
 AGENT_TIMEOUT=300
@@ -46,8 +46,8 @@ MLE_BENCH_WORKSPACE_DIR=./workspace
 # 最大运行时间限制（小时）（用于替换additional_notes.txt中的{time_limit}）
 MLE_BENCH_TIME_LIMIT=4
 
-# 最大步骤数限制（用于替换additional_notes.txt中的{step_limit}）
-MLE_BENCH_STEP_LIMIT=100
+# 最大步骤数限制（用于替换additional_notes.txt中的{epoch_limit}）
+MLE_BENCH_EPOCH_LIMIT=100
 
 # Agent使用的Conda环境名称
 CONDA_ENV_NAME=agent
@@ -68,4 +68,4 @@ INIT_TASK_NUM=4
 EXPLORE_RATIO=0.5
 
 # 每次添加的任务数量
-STEP_TASK_NUM=2
+EPOCH_TASK_NUM=2
