--- a/requirements_agent.txt
+++ b/requirements_agent.txt
@@ -1,89 +1,327 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
+albucore==0.0.24
+albumentations==2.0.8
+alembic==1.17.1
+annotated-types==0.7.0
 anthropic==0.34.1
+antlr4-python3-runtime==4.9.3
+anyio==4.11.0
 arrow==1.3.0
+asttokens==3.0.0
+async-timeout==4.0.3
+attrs==25.4.0
+audioread==3.1.0
 backoff==2.2.1
 bayesian-optimization==1.5.1
 bayespy==0.5.1
+bcrypt==5.0.0
 biopython==1.84
 black==24.3.0
+blinker==1.9.0
+blis==1.2.1
 bson==0.5.10
+build==1.3.0
+cachetools==6.2.1
+catalogue==2.0.10
+certifi==2025.10.5
+cffi==2.0.0
+charset-normalizer==3.4.4
+chromadb==1.3.7
+click==8.3.0
+cloudpathlib==0.23.0
+cloudpickle==3.1.1
+colorama==0.4.6
+coloredlogs==15.0.1
+colorlog==6.10.1
+comm==0.2.3
+confection==0.1.5
+contourpy==1.3.2
 coolname==2.2.0
+cycler==0.12.1
+cymem==2.0.11
 dataclasses-json==0.6.7
 datasets==2.1.0
+debugpy==1.8.17
+decorator==5.2.1
+dill==0.4.0
+distro==1.9.0
+durationpy==0.10
+exceptiongroup==1.3.0
+executing==2.2.1
 fastai==2.7.17
+fastcore==1.7.29
+fastdownload==0.0.7
 fastdtw==0.3.4
+fastjsonschema==2.21.2
+fastprogress==1.0.3
+filelock==3.20.0
+Flask==3.1.2
+flatbuffers==25.9.23
+fonttools==4.60.1
+frozenlist==1.8.0
+fsspec==2025.10.0
 funcy==2.0
-pydicom==2.4.4
-gensim==4.3.3
+future==1.0.0
+gdcm==1.1
+gensim==4.4.0
 genson==1.3.0
+geographiclib==2.1
 geopy==2.4.1
+google-ai-generativelanguage==0.6.10
+google-api-core==2.28.1
+google-api-python-client==2.185.0
+google-auth==2.42.0
+google-auth-httplib2==0.2.0
 google-generativeai==0.8.2
+googleapis-common-protos==1.71.0
+greenlet==3.2.4
+grpcio==1.76.0
+grpcio-status==1.71.2
 gym==0.26.2
+gym-notices==0.1.0
+h11==0.16.0
+h2==4.3.0
 h5py==3.11.0
+hf-xet==1.2.0
 hmmlearn==0.3.2
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.31.0
+httptools==0.7.1
+httpx==0.28.1
+httpx-sse==0.4.3
+huggingface-hub==0.36.0
+humanfriendly==10.0
 humanize==4.8.0
+hyperframe==6.1.0
 hyperopt==0.2.7
+idna==3.11
 igraph==0.11.6
 imagecodecs==2024.6.1
+imageio==2.37.0
 imbalanced-learn==0.12.3
 imgaug==0.4.0
+importlib_metadata==8.7.0
+importlib_resources==6.5.2
+iniconfig==2.3.0
 ipykernel==6.29.5
 ipython==8.27.0
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+jiter==0.11.1
+joblib==1.5.2
+jsonpatch==1.33
+jsonpointer==3.0.0
 jsonschema==4.19.2
+jsonschema-specifications==2025.9.1
+jupyter_client==8.6.3
+jupyter_core==5.9.1
+kiwisolver==1.4.9
 kornia==0.6.10
+kubernetes==34.1.0
+langchain==1.1.3
+langchain-classic==1.0.0
+langchain-community==0.4.1
+langchain-core==1.2.0
+langchain-text-splitters==1.0.0
+langcodes==3.5.0
+langgraph==1.0.5
+langgraph-checkpoint==3.0.1
+langgraph-prebuilt==1.0.5
+langgraph-sdk==0.3.0
+langsmith==0.4.59
+language_data==1.3.0
+lazy_loader==0.4
 librosa==0.10.2.post1
 lightgbm==4.5.0
+lightning-utilities==0.15.2
+llvmlite==0.45.1
 loguru==0.7.2
+Mako==1.3.10
+marisa-trie==1.3.1
+markdown-it-py==4.0.0
 markovify==0.9.4
+MarkupSafe==3.0.3
+marshmallow==3.26.1
 matplotlib==3.9.2
+matplotlib-inline==0.2.1
+mdurl==0.1.2
+mem0ai==1.0.1
+mmh3==5.2.0
+mpmath==1.3.0
+msgpack==1.1.2
+msgpack-numpy==0.4.8
+multidict==6.7.0
+multiprocess==0.70.18
+murmurhash==1.0.13
+mypy_extensions==1.1.0
 nbformat==5.10.4
-numba==0.60.0
-numpy==1.26.2
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.2
+numba==0.62.1
+numpy==1.26.4
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
+nvidia-cudnn-cu12==8.9.2.26
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
+nvidia-nccl-cu12==2.19.3
+nvidia-nvjitlink-cu12==12.9.86
+nvidia-nvtx-cu12==12.1.105
+oauthlib==3.3.1
 omegaconf==2.3.0
-openai==1.48.0
+onnxruntime==1.23.2
+openai==2.11.0
 opencv-python==4.10.0.84
+opencv-python-headless==4.11.0.86
+opentelemetry-api==1.39.1
+opentelemetry-exporter-otlp-proto-common==1.39.1
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
 optuna==4.0.0
-pandas==2.1.4
+orjson==3.11.5
+ormsgpack==1.12.0
+overrides==7.7.0
+packaging==25.0
+pandas==2.3.3
+parso==0.8.5
+pathspec==0.12.1
 pdf2image==1.17.0
+pexpect==4.9.0
 pillow==10.4.0
+pip==25.2
+platformdirs==4.5.0
 plotly==5.24.0
+pluggy==1.6.0
+pooch==1.8.2
+portalocker==3.2.0
+posthog==5.4.0
+preshed==3.0.10
+prompt_toolkit==3.0.52
+propcache==0.4.1
+proto-plus==1.26.1
+protobuf==5.29.5
+psutil==7.1.2
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py4j==0.10.9.9
+pyaml==25.7.0
 pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pybase64==1.4.3
+pycparser==2.23
+pydantic==2.12.3
+pydantic_core==2.41.4
+pydantic-settings==2.12.0
+pydicom==2.4.4
+Pygments==2.19.2
 pylibjpeg==2.0.1
 pyocr==0.8.5
 pyparsing==3.1.4
 pypdf==4.3.1
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 pytest==7.4.3
-pytorch-lightning==2.4.0
-pytz==2024.1
-pyyaml==6.0.2
-requests==2.31.0
+python-dateutil==2.9.0.post0
+python-dotenv==1.2.1
+pytorch-lightning==2.6.0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==27.1.0
+qdrant-client==1.16.2
+referencing==0.37.0
+regex==2025.10.23
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+responses==0.18.0
 rich==13.7.0
+rpds-py==0.28.0
+rsa==4.9.1
+safetensors==0.6.2
 scikit-image==0.24.0
 scikit-learn==1.2.2
 scikit-optimize==0.10.2
-scipy==1.11.4
+scipy==1.15.3
 seaborn==0.13.2
 sentencepiece==0.2.0
+setuptools==80.9.0
+shapely==2.1.2
+shellingham==1.5.4
 shutup==0.2.0
+simsimd==6.5.3
+six==1.17.0
 sklearn-pandas==2.2.0
+smart_open==7.5.0
+sniffio==1.3.1
+soundfile==0.13.1
+soxr==1.0.0
+spacy==3.8.7
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.44
+srsly==2.5.1
+stack-data==0.6.3
+stringzilla==4.4.0
 sympy==1.13.2
+tabulate==0.9.0
+tenacity==9.1.2
 tensorpack==0.11
+termcolor==3.2.0
 textblob==0.18.0.post0
+texttable==1.7.0
+thinc==8.3.4
+threadpoolctl==3.6.0
+tifffile==2025.5.10
 timm==0.9.7
+tokenizers==0.19.1
+tomli==2.3.0
 torch==2.2.0
 torchaudio==2.2.0
+torchdata==0.7.1
 torchinfo==1.8.0
 torchmetrics==1.3.1
 torchtext==0.17.0
 torchvision==0.17.0
+tornado==6.5.2
 tqdm==4.66.2
+traitlets==5.14.3
 transformers==4.44.2
+triton==2.2.0
+typer==0.20.0
+types-python-dateutil==2.9.0.20251008
+typing_extensions==4.15.0
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+tzdata==2025.2
+Unidecode==1.4.0
+uritemplate==4.2.0
+urllib3==2.3.0
+uuid_utils==0.12.0
+uvicorn==0.38.0
+uvloop==0.22.1
+wasabi==1.1.3
+watchfiles==1.1.1
+wcwidth==0.2.14
+weasel==0.4.1
+websocket-client==1.9.0
+websockets==15.0.1
+Werkzeug==3.1.4
+wheel==0.45.1
+wrapt==2.0.1
 xlrd==2.0.1
-# From requirements.txt
-python-dotenv
-langchain
-langchain-core
-langchain-community
-flask
-chromadb
-mem0ai
-httpx<0.28
+xxhash==3.6.0
+yarl==1.22.0
+zipp==3.23.0
+zstandard==0.25.0
