--- a/requirements_agent.txt
+++ b/requirements_agent.txt
@@ -2,7 +2,7 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
 aiosignal==1.4.0
 albucore==0.0.24
-albumentations==2.0.8
+albumentations==1.3.1
 alembic==1.17.1
 annotated-types==0.7.0
 anthropic==0.34.1
@@ -125,7 +125,8 @@ kubernetes==34.1.0
 langchain==1.1.3
 langchain-classic==1.0.0
 langchain-community==0.4.1
-langchain-core==1.2.0
+langchain-core==1.2.5
+langchain-openai==1.1.6
 langchain-text-splitters==1.0.0
 langcodes==3.5.0
 langgraph==1.0.5
@@ -199,7 +200,6 @@ pathspec==0.12.1
 pdf2image==1.17.0
 pexpect==4.9.0
 pillow==10.4.0
-pip==25.2
 platformdirs==4.5.0
 plotly==5.24.0
 pluggy==1.6.0
@@ -222,8 +222,8 @@ pyasn1_modules==0.4.2
 pybase64==1.4.3
 pycparser==2.23
 pydantic==2.12.3
-pydantic_core==2.41.4
 pydantic-settings==2.12.0
+pydantic_core==2.41.4
 pydicom==2.4.4
 Pygments==2.19.2
 pylibjpeg==2.0.1
@@ -235,11 +235,12 @@ pyproject_hooks==1.2.0
 pytest==7.4.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
-pytorch-lightning==2.6.0
+pytorch-lightning==2.4.0
 pytz==2025.2
 PyYAML==6.0.2
 pyzmq==27.1.0
 qdrant-client==1.16.2
+qudida==0.0.4
 referencing==0.37.0
 regex==2025.10.23
 requests==2.32.5
@@ -256,7 +257,6 @@ scikit-optimize==0.10.2
 scipy==1.15.3
 seaborn==0.13.2
 sentencepiece==0.2.0
-setuptools==80.9.0
 shapely==2.1.2
 shellingham==1.5.4
 shutup==0.2.0
@@ -284,6 +284,7 @@ texttable==1.7.0
 thinc==8.3.4
 threadpoolctl==3.6.0
 tifffile==2025.5.10
+tiktoken==0.12.0
 timm==0.9.7
 tokenizers==0.19.1
 tomli==2.3.0
@@ -301,9 +302,9 @@ transformers==4.44.2
 triton==2.2.0
 typer==0.20.0
 types-python-dateutil==2.9.0.20251008
-typing_extensions==4.15.0
 typing-inspect==0.9.0
 typing-inspection==0.4.2
+typing_extensions==4.15.0
 tzdata==2025.2
 Unidecode==1.4.0
 uritemplate==4.2.0
@@ -318,7 +319,6 @@ weasel==0.4.1
 websocket-client==1.9.0
 websockets==15.0.1
 Werkzeug==3.1.4
-wheel==0.45.1
 wrapt==2.0.1
 xlrd==2.0.1
 xxhash==3.6.0
